Replace some method calls that aren't available